[KH] fix spacing on punk showcase on mobile

--- a/src/Punk/Punk.module.css
+++ b/src/Punk/Punk.module.css
@@ -18,4 +18,9 @@
 .h3 {
   font-size: 1.1em;
   margin-top: 16px;
+  max-width: 100%;
+  padding-bottom: 16px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
